bk_ida/gccida/g0/print_operand
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6211:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u_1; // [rsp+20h] [rbp-120h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6214:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u_0; // [rsp+80h] [rbp-C0h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6217:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+E0h] [rbp-60h] BYREF 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6405:23: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 0, file); 
                      ^~~~~~~~
                      rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6405:32: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 0, file); 
                    ~~~~~~~~~~~^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6405:48: error: use of undeclared identifier 'machine_mode'
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 0, file); 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6416:10: error: use of undeclared identifier 'unk_77BDA8'
fwrite( &unk_77BDA8, 1uLL, 2uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6420:10: error: use of undeclared identifier 'off_77BDB8'
fwrite( &off_77BDB8, 1uLL, 3uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6424:19: error: use of undeclared identifier 'off_77BDB8'
fwrite( ( char *)&off_77BDB8 + 4, 1uLL, 3uLL, file); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6428:10: error: use of undeclared identifier 'unk_77BBEF'
fwrite( &unk_77BBEF, 1uLL, 2uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6432:10: error: use of undeclared identifier 'unk_77BDAB'
fwrite( &unk_77BDAB, 1uLL, 2uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6438:10: error: use of undeclared identifier 'off_77BDC0'
fwrite( &off_77BDC0, 1uLL, 3uLL, file); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6446:23: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 1, file); 
                      ^~~~~~~~
                      rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6446:32: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 1, file); 
                    ~~~~~~~~~~~^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6446:48: error: use of undeclared identifier 'machine_mode'
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 0, 1, file); 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6484:23: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 1, 0, file); 
                      ^~~~~~~~
                      rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6484:32: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 1, 0, file); 
                    ~~~~~~~~~~~^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6484:48: error: use of undeclared identifier 'machine_mode'
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 1, 0, file); 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/i386.c:6489:23: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
put_condition_code( ( rtx_code)*( _WORD *)x, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 1, 1, file); 
                      ^~~~~~~~
                      rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_operand/src/obj/i386.o] Error 1
